--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/css": "^11.7.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "prismjs": "^1.27.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "slate": "^0.73.0",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.73.0"
   }
 }
