--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@emotion/css": "^11.7.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
+    "is-hotkey": "^0.2.0",
+    "is-url": "^1.2.4",
     "next": "latest",
     "prismjs": "^1.27.0",
     "react": "17.0.2",
