--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.7.1",
+    "@supabase/supabase-js": "^1.33.2",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "is-hotkey": "^0.2.0",
@@ -15,10 +16,12 @@
     "prismjs": "^1.27.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-visibility-sensor": "^5.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "slate": "^0.73.0",
     "slate-history": "^0.66.0",
-    "slate-react": "^0.73.0"
+    "slate-react": "^0.73.0",
+    "supabase": "^0.5.0"
   }
 }
